# hpp-hrp2

./: CMakeLists.txt  README.md
src/hpp/corbaserver/hrp2/: __init__.py  robot.py
src/hpp/corbaserver/manipulation/hrp2/: robot.py
